@@ -241,7 +241,7 @@ async function publish(args) {
       const dataUpdateAlias = await lambda
         .updateAlias({
           FunctionName: `${functionName}`,
-          Name: `${args.alias || 'stage'}`,
+          Name: `${args.alias}`,
           FunctionVersion: `${Version}`,
           Description: `(${
             process.env.AWS_BRANCH_NAME ||
