@@ -37,7 +37,7 @@ async function getCreds(secretName) {
 
 async function retrieveSecrets(secretKeys) {
   if (!secretKeys || secretKeys.split(',').length === 0) {
-    console.log(`${'[WARN]'.warn} No secret key defined`);
+    console.log(`${'[INFO]'.info} No secret key defined`);
     return Promise.resolve();
   }
 
@@ -45,6 +45,7 @@ async function retrieveSecrets(secretKeys) {
   console.log(`${items.length} secret(s) will be retrieved`.debug);
 
   for await (const secretKey of items) {
+    let hasSuffix = false;
     let databasePort;
     let databaseName;
     let databaseHost;
@@ -52,23 +53,29 @@ async function retrieveSecrets(secretKeys) {
     console.log(
       `Retrieving secret(s) for '${secretKey}' using '${process.env.AWS_PROFILE}' profile in '${process.env.AWS_REGION}' region.`.debug,
     );
+    if (secretKey.includes(':')) {
+      console.debug('secretKey contains a suffix');
+      hasSuffix = true;
+    }
 
-    const secret = await getCreds(secretKey);
+    const secret = await getCreds(secretKey.split(':')[0]);
 
     logDebug(`Secret ${secretKey}  retrieved:'`);
 
     const secretParsed = JSON.parse(secret);
 
     Object.keys(secretParsed).forEach((key) => {
-      logDebug(`Adding ${key} to your environment variables.`);
-      process.env[key] = secretParsed[key];
+      const tKey = hasSuffix ? `${key.toUpperCase()}_${secretKey.split(':')[1].toUpperCase()}` : key;
+
+      logDebug(`Adding ${tKey} to your environment variables.`);
+      process.env[tKey] = secretParsed[tKey];
 
       // RDS Secret Manager when using the Cloudformation
       if (key === 'username') {
-        process.env.DB_USER = secretParsed[key];
+        process.env[`DB_USER${hasSuffix ? `_${secretKey.split(':')[1].toUpperCase()}` : ''}`] = secretParsed[key];
       }
       if (key === 'password') {
-        process.env.DB_PASS = secretParsed[key];
+        process.env[`DB_PASS${hasSuffix ? `_${secretKey.split(':')[1].toUpperCase()}` : ''}`] = secretParsed[key];
       }
       if (key === 'port') {
         databasePort = secretParsed[key];
@@ -82,7 +89,9 @@ async function retrieveSecrets(secretKeys) {
     });
 
     if (databasePort && databaseName) {
-      process.env.DB_URL = `jdbc:mysql://${databaseHost}:${databasePort}/${databaseName}?useUnicode=true&characterEncoding=UTF-8`;
+      process.env[
+        `DB_URL${hasSuffix ? `_${secretKey.split(':')[1].toUpperCase()}` : ''}`
+      ] = `jdbc:mysql://${databaseHost}:${databasePort}/${databaseName}?useUnicode=true&characterEncoding=UTF-8`;
     }
 
     console.log(`'${secretKey}' secret(s) retrieved successfully.`.success);
