@@ -1,3 +1,5 @@
+// TEMPLATE
+
 /* eslint-disable max-len */
 module.exports = {
   base: {
