@@ -1,11 +1,0 @@
-DB_USER="<DB_USER>"
-DB_PASS="<DB_PASS>"
-DB_URL="jdbc:mysql://<DB_URL>:3306/<DATABASE_NAME>?useUnicode=true&characterEncoding=UTF-8"
-API_KEY="<LIQUIBASE_HUB_API_KEY>"
-PROJECT_ID="<LIQUIBASE_HUB_PROJECT_ID>"
-LIQUIBASE_CONF_PATH="<ABSOLUTE_PATH>/liquibase.properties"
-LIQUIBASE_BASE_PATH="<ABSOLUTE_PATH>/liquibase-4.3.3/./liquibase"
-BASE_PATH="./mysql/changelog"
-DB_USER_REF="<DB_USER_REF>"
-DB_PASS_REF="<DB_PASS_REF>"
-DB_URL_REF="jdbc:mysql://<DB_URL_REF>:3306/<DATABASE_NAME_REF>?useUnicode=true&characterEncoding=UTF-8"
