@@ -8,7 +8,7 @@
   },
   "scripts": {
     "lint": "eslint **/*.js",
-    "postinstall": "bash ./liquibase/scripts/install-liquibase.sh",
+    "postinstall": "[[ -z \"$SKIP_POST\" ]] && bash ./liquibase/scripts/install-liquibase.sh || echo 'Skip Post-Installation'",
     "prepare": "husky install",
     "pre-commit": "lint-staged",
     "pre-push": "jest"
