@@ -1,3 +1,15 @@
+2021-05-17
+
+- Working on feature request https://github.com/Insyders/yadu/issues/2
+
+2021-05-14
+
+- Improved documentation
+
+2021-05-13
+
+- Improve documentation
+
 2021-05-12
 
 - Added args for db-user, db-pass and db-url
